--- a/src/componentes/Botao/botao.css
+++ b/src/componentes/Botao/botao.css
@@ -7,7 +7,8 @@
     border: none;
     cursor: pointer;
     color: #FFF ;
-    margin: 32px;
+    margin: 50px;
+    margin-left: 75px;
 }
 
 .botao:hover {
